# visichat

./: .gitignore  CMakeLists.txt
android/: AndroidManifest.xml
configs/: external_deps.cmake
resources/: qtquickcontrols2.conf
sources/: main.cpp  qchat.cpp  qchat.hpp  servers.hpp
views/: ChatMsg.qml  ChatMsgItem.qml  ChatMsgsPage.qml  ChatView.qml.autosave  MainApp.qml  MainWindow.qml  MainWindow.qml.bak  QrCodeLoad.qml  QrCodeView.qml  RoundButton.qml
